fixing line breaks in notes

--- a/src/scss/partials/_helpers.scss
+++ b/src/scss/partials/_helpers.scss
@@ -39,7 +39,7 @@
 }
 
 @keyframes pulse {
-  0 {
+  0% {
     opacity: 1;
   }
   100% {
